--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==6.7
 Flask==0.12.2
 idna==2.6
 itsdangerous==0.24
-MarkupSafe==1.0
+Jinja2==2.10
+MarkupSafe==1.0a
 requests==2.18.4
-
+urllib3==1.22
+Werkzeug==0.14.1
